Source/WebKit/UIProcess/API/C/WKPagePrivate.h
@@ -198,6 +198,8 @@ typedef void (*WKPageLoadedSubresourceDomainsFunction)(WKArrayRef domains, void*
 WK_EXPORT void WKPageLoadedSubresourceDomains(WKPageRef page, WKPageLoadedSubresourceDomainsFunction callback, void* callbackContext);
 WK_EXPORT void WKPageClearLoadedSubresourceDomains(WKPageRef page);
 
+WK_EXPORT void WKPageSetMediaCaptureReportingDelayForTesting(WKPageRef page, double delay);
+
 #ifdef __cplusplus
 }
 #endif
